<resources>
<string name="app_name">HotelNow</string>


<string name="action_sign_in_short">Register</string>
<string name="email">Email</string>
<string name="minimum_password">Password too short, enter minimum 6 characters!</string>
<!--<string name="auth_failed">Authentication failed, check your email and password or sign up</string>-->
<string name="change_email">Change Email</string>
<string name="change_password">Change Password</string>
<string name="send_password_reset_email">Send Password reset email</string>
<string name="remove_user">Remove user</string>
<string name="new_pass">New Password</string>
<string name="title_activity_profile">Firebase</string>
<string name="title_activity_login">Sign in</string>
<string name="hint_email">Email</string>
<string name="hint_password">Password</string>
<string name="hint_name">Fullname</string>
<string name="btn_login">LOGIN</string>
<string name="prompt_password">Please enter your password</string>
<string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
<string name="btn_link_to_login">Already registered? Login!</string>
<string name="title_activity_reset_password">ResetPasswordActivity</string>
<string name="btn_forgot_password">Forgot your password?</string>
<string name="btn_reset_password">Reset Password</string>
<string name="btn_back"><![CDATA[<< Back]]></string>
<string name="hint_new_email">New Email</string>
<string name="btn_change">Change</string>
<string name="btn_send">Send</string>
<string name="btn_remove">Remove</string>
<string name="btn_sign_out">Sign Out</string>
<string name="lbl_forgot_password">Forgot password?</string>
<string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
<string name="email_id">Email ID</string>

<!--*******************************************Instagram Clone******************************************************-->

<!-- fragment names -->
<string name="edit_profile_fragment">Edit Profile</string>
<string name="view_post_fragment">View Post</string>
<string name="sign_out_fragment">Sign Out</string>
<string name="profile_fragment">Profile</string>
<string name="view_profile_fragment">ViewProfile</string>
<string name="view_comments_fragment">View Comments</string>

<!-- dialog names -->
<string name="confirm_password_dialog">ConfirmPaswordDialog</string>

<!-- Firebase messages -->
<string name="auth_failed">Failed to Authenticate</string>
<string name="auth_success">Authentication Success</string>

<!-- Firebase database fields -->
<string name="dbname_users">users</string>
<string name="dbname_user_account_settings">user_account_settings</string>
<string name="dbname_photos">photos</string>
<string name="dbname_user_photos">user_photos</string>
<string name="dbname_following">following</string>
<string name="dbname_followers">followers</string>
<string name="field_username">username</string>
<string name="field_email">email</string>
<string name="field_display_name">display_name</string>
<string name="field_website">website</string>
<string name="field_description">description</string>
<string name="field_phone_number">phone_number</string>
<string name="field_user_id">user_id</string>
<string name="field_likes">likes</string>
<string name="field_caption">caption</string>
<string name="field_date_created">date_created</string>
<string name="field_photo_id">photo_id</string>
<string name="field_tags">tags</string>
<string name="field_image_path">image_path</string>
<string name="field_comments">comments</string>



<!-- photo types -->
<string name="new_photo">new_photo</string>
<string name="profile_photo">profile_photo</string>

<!-- Intent Extras -->
<string name="calling_activity">calling_activity</string>
<string name="selected_image">selected_image</string>
<string name="selected_bitmap">selected_bitmap</string>
<string name="return_to_fragment">return_to_fragment</string>
<string name="intent_user">intent_user</string>

<!-- Bundle arg names -->
<string name="activity_number">activity_number</string>
<string name="bundle_photo">bundle_photo</string>
<string name="bundle_user_account_settings">bundle_user_account_settings</string>

<!-- activity names -->
<string name="profile_activity">Profile Activity</string>
<string name="search_activity">Search Activity</string>
<string name="home_activity">Home Activity</string>

<!-- strings -->
<string name="gallery">GALLERY</string>
<string name="photo">PHOTO</string>
<string name="string_open_camera">Open Camera</string>
<string name="string_next">Next</string>
<string name="string_share">Share</string>


<!--Elastic Search-->

    <!-- Fragment Names -->
    <string name="fragment_search">Search</string>
    <string name="fragment_watch_list">Watch List</string>
    <string name="fragment_post">Post</string>
    <string name="fragment_view_post">Post</string>
    <string name="fragment_account">Account</string>

    <!-- Dialog Names -->
    <string name="dialog_select_photo">SelectPhoto</string>

    <!-- Database nodes -->
<string name="node_users">users</string>
<string name="node_posts">posts</string>
<string name="node_elasticsearch">elasticsearch</string>
<string name="node_watch_list">watch_list</string>


<!-- Database field names -->
<string name="field_password">password</string>
<!--<string name="field_user_id">user_id</string>-->
<string name="field_post_id">post_id</string>


<!-- Intent extras and Bundle arguments -->
<string name="arg_post_id">arg_post_id</string>

<!-- Shared Preferenes -->
<string name="preferences_country">preferences_country</string>
<string name="preferences_state_province">preferences_state_province</string>
<string name="preferences_city">preferences_city</string>


<string name="lorem_ipsum">TESTINGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG
        TEXTTTTTTTTTTTTTTTTTTT</string>

<!--<string name="app_name">ForSale</string>-->
</resources>
